# cp-tp3

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: bs_monothread.h  bs_multithread.h  bs_simulation_utils.h  global_context.h  init_parser.h  macros.h  tuple_double_double.h  tuple_template.h  ug_sequencial.h
src/: bs_monothread.c  bs_multithread.c  bs_simulation_utils.c  global_context.c  init_parser.c  main.c  main_parallel.c  ug_parallel.c  ug_sequencial.c
